--- a/seiyuu_subreddit_main.css
+++ b/seiyuu_subreddit_main.css
@@ -230,6 +230,40 @@
  /*****  General  *****/
 /*********************/
 
+/* Scrolling Banner */
+#header {
+    background: url(%%banner-bg%%);
+    -webkit-animation: scroll 25s linear infinite;
+    animation: scroll 100s linear infinite;
+}
+@-webkit-keyframes scroll {
+    from { background-position: 0; }
+    to   { background-position: -2560px; }
+}
+
+#header-bottom-left {
+    padding-top: 130px;
+}
+
+/* Subreddit home button */
+#header .pagename a {
+    background: url(%%banner-maintxt%%) no-repeat;
+    background-position: center;
+    background-size: contain;
+    position: absolute;
+    top: 50%;
+    min-height: 70%;
+    left: 50%;
+    min-width: 42%;
+    transform: scale(1, 1) translate(-50%, -40%);
+    font-size: 0px; /* This is to remove the sub name text */
+}
+
+/* Gets rid of the text after the colon in the sub name */
+#header-bottom-left > span.pagename {
+    color: transparent;
+}
+
 /* Comment note (borrowed from /r/games) - above top-level reply box only */
 .commentarea .usertext-edit:after {
     /* content: "Please note: /r/Seiyuu's comments are moderated."; */
