Change to potastic's flair

--- a/seiyuu_subreddit_main.css
+++ b/seiyuu_subreddit_main.css
@@ -155,7 +155,7 @@
         content: ".......";  
     }
     .flair.flair-Potastic{ font-weight:bold; background-color: rgba(255,255,255,.1);  }
-    .flair.flair-Potastic:after { font-size: 1.5em; color: red; content: " ♥" }
+    .flair.flair-Potastic:after { font-size: 1.5em; color: red; content: " Japanese Salary-man Life♥" }
 
 
 /*** >>> Q <<< ***/
